/*******************************************************************************
 * Copyright (c) 2017, 2023 IBM Corporation and others.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License 2.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-2.0/
 * 
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *     IBM Corporation - initial API and implementation
 *******************************************************************************/

tasks.withType(JavaCompile) {
    options.release = 19
    options.compilerArgs.add('--enable-preview')
}

compileJava {
    inputs.files { rasInstrumentationInputFiles() }
    doLast {
        rasInstrumentationTaskdef(ant)
        println 'Running manual instrumentation for webcontainer'
        ant.instrumentForTrace(ffdc: true, taskInjection: false) {
            fileset(dir: compileJava.destinationDir) {
                include(name: '**/*.class')
                exclude(name: '**/com/ibm/ws/webcontainer/**')
                exclude(name: '**/com/ibm/wsspi/webcontainer/**')
                include(name: '**/com/ibm/ws/webcontainer/osgi/**/*.class')
                include(name: '**/com/ibm/wsspi/webcontainer/osgi/**/*.class')
                exclude(name: '**/com/ibm/ws/webcontainer/osgi/response/WCOutputStream.class')
                exclude(name: '**/com/ibm/ws/webcontainer/osgi/request/IRequestImpl.class')
                exclude(name: '**/com/ibm/ws/webcontainer/osgi/webapp/WebApp.class')
            }
        }
    }
}

test {
    dependsOn ':cnf:copyMavenLibs'
    doFirst {
        jvmArgs = ['--enable-preview']
    }
   jvmArgs = ["--add-opens", "java.base/java.io=ALL-UNNAMED"]
}